opam-version: "2.0"
synopsis:
  "Cap'n Proto is a capability-based RPC system with bindings for many languages"
description: """
This package provides a version of the Cap'n Proto RPC system using the Cap'n
Proto serialisation format and Lwt for concurrency."""
maintainer: "Thomas Leonard <talex5@gmail.com>"
authors: "Thomas Leonard <talex5@gmail.com>"
license: "Apache"
homepage: "https://github.com/mirage/capnp-rpc"
bug-reports: "https://github.com/mirage/capnp-rpc/issues"
doc: "https://mirage.github.io/capnp-rpc/"
depends: [
  "ocaml" {>= "4.03.0"}
  "conf-capnproto" {build}
  "capnp" {>= "3.0.0"}
  "capnp-rpc" {>= "0.3"}
  "lwt"
  "astring"
  "fmt"
  "logs"
  "asetmap"
  "mirage-flow-lwt"
  "tls" {>= "0.8.0"}
  "mirage-kv-lwt"
  "mirage-clock"
  "base64" {>= "3.0.0"}
  "uri" {>= "1.6.0"}
  "ptime"
  "asn1-combinators" {>= "0.2.0"}
  "x509" {>= "0.7.0"}
  "dune" {>= "1.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/capnp-rpc.git"
