opam-version: "2.0"
synopsis:
  "Cap'n Proto is a capability-based RPC system with bindings for many languages"
description: """
This package provides a version of the Cap'n Proto RPC system using the Cap'n
Proto serialisation format and Lwt for concurrency."""
maintainer: "Thomas Leonard <talex5@gmail.com>"
authors: "Thomas Leonard <talex5@gmail.com>"
license: "Apache-2.0"
homepage: "https://github.com/mirage/capnp-rpc"
bug-reports: "https://github.com/mirage/capnp-rpc/issues"
doc: "https://mirage.github.io/capnp-rpc/"
depends: [
  "ocaml" {>= "4.08.0"}
  "conf-capnproto" {build}
  "capnp" {>= "3.4.0"}
  "capnp-rpc" {= version}
  "astring"
  "fmt" {>= "0.8.7"}
  "logs"
  "asetmap"
  "uri" {>= "1.6.0"}
  "dune" {>= "3.0"}
  "eio" {>= "0.15"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/capnp-rpc.git"
