opam-version: "2.0"
synopsis:
  "Cap'n Proto is a capability-based RPC system with bindings for many languages"
description:
  "This package provides a version of the Cap'n Proto RPC system for use with MirageOS."
maintainer: "Thomas Leonard <talex5@gmail.com>"
authors: "Thomas Leonard <talex5@gmail.com>"
license: "Apache-2.0"
homepage: "https://github.com/mirage/capnp-rpc"
doc: "https://mirage.github.io/capnp-rpc/"
bug-reports: "https://github.com/mirage/capnp-rpc/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "capnp" {>= "3.1.0"}
  "capnp-rpc-net" {= version}
  "fmt" {>= "0.8.7"}
  "logs"
  "dns-client-mirage" {>= "7.0.0"}
  "tls-mirage"
  "tcpip" {>= "7.0.0"}
  "alcotest" {>= "1.0.1" & with-test}
  "alcotest-lwt" {>= "1.0.1" & with-test}
  "arp" {>= "3.0.0" & with-test}
  "asetmap" {with-test}
  "astring" {with-test}
  "ethernet" {>= "3.0.0" & with-test}
  "io-page-unix" {with-test}
  "mirage-vnetif" {with-test}
  "mirage-crypto-rng" {>= "0.7.0" & with-test}
  "dune" {>= "3.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/capnp-rpc.git"
