opam-version: "2.0"
synopsis:
  "Cap'n Proto is a capability-based RPC system with bindings for many languages"
description: """
This package provides support for using Cap'n Proto services over a network,
optionally using TLS."""
maintainer: "Thomas Leonard <talex5@gmail.com>"
authors: "Thomas Leonard <talex5@gmail.com>"
license: "Apache-2.0"
homepage: "https://github.com/mirage/capnp-rpc"
bug-reports: "https://github.com/mirage/capnp-rpc/issues"
doc: "https://mirage.github.io/capnp-rpc/"
depends: [
  "ocaml" {>= "4.08.0"}
  "conf-capnproto" {build}
  "capnp" {>= "3.4.0"}
  "capnp-rpc" {= version}
  "capnp-rpc-lwt" {= version}
  "astring"
  "fmt" {>= "0.8.7"}
  "logs"
  "asetmap"
  "cstruct" {>= "6.0.0"}
  "tls-eio" {>= "0.15.5"}
  "base64" {>= "3.0.0"}
  "uri" {>= "1.6.0"}
  "ptime"
  "prometheus" {>= "0.5"}
  "asn1-combinators" {>= "0.2.0"}
  "x509" {>= "0.15.0"}
  "tls-mirage"
  "dune" {>= "3.0"}
  "mirage-crypto"
  "mirage-crypto-rng"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/capnp-rpc.git"
