opam-version: "2.0"
synopsis:
  "Cap'n Proto is a capability-based RPC system with bindings for many languages"
description:
  "This package contains some helpers for use with traditional (non-Unikernel) operating systems."
maintainer: "Thomas Leonard <talex5@gmail.com>"
authors: "Thomas Leonard <talex5@gmail.com>"
license: "Apache"
homepage: "https://github.com/mirage/capnp-rpc"
bug-reports: "https://github.com/mirage/capnp-rpc/issues"
doc: "https://mirage.github.io/capnp-rpc/"
depends: [
  "ocaml" {>= "4.03.0"}
  "capnp-rpc-net" {= version}
  "cmdliner"
  "cstruct-lwt"
  "astring"
  "fmt" {>= "0.8.4"}
  "logs"
  "base64" {>= "3.0.0"}
  "dune" {>= "1.0"}
  "alcotest-lwt" {with-test & >= "1.0.1"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/capnp-rpc.git"
