opam-version: "2.0"
synopsis:
  "Cap'n Proto is a capability-based RPC system with bindings for many languages"
description:
  "This package contains some helpers for use with traditional (non-Unikernel) operating systems."
maintainer: "Thomas Leonard <talex5@gmail.com>"
authors: "Thomas Leonard <talex5@gmail.com>"
license: "Apache-2.0"
homepage: "https://github.com/mirage/capnp-rpc"
doc: "https://mirage.github.io/capnp-rpc/"
bug-reports: "https://github.com/mirage/capnp-rpc/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "capnp-rpc-net" {= version}
  "cmdliner" {>= "1.1.0"}
  "cstruct-lwt"
  "astring"
  "fmt" {>= "0.8.7"}
  "logs"
  "extunix"
  "base64" {>= "3.0.0"}
  "dune" {>= "2.0"}
  "alcotest" {>= "1.0.1" & with-test}
  "alcotest-lwt" { >= "1.0.1" & with-test}
  "mirage-crypto-rng" {>= "0.7.0"}
  "lwt"
  "asetmap" {with-test}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/capnp-rpc.git"
