opam-version: "2.0"
synopsis:
  "Cap'n Proto is a capability-based RPC system with bindings for many languages"
description: """
This package contains the core protocol.
Users will normally want to use `capnp-rpc-lwt` and, in most cases,
`capnp-rpc-unix` rather than using this one directly."""
maintainer: "Thomas Leonard <talex5@gmail.com>"
authors: "Thomas Leonard <talex5@gmail.com>"
license: "Apache-2.0"
homepage: "https://github.com/mirage/capnp-rpc"
bug-reports: "https://github.com/mirage/capnp-rpc/issues"
doc: "https://mirage.github.io/capnp-rpc/"
depends: [
  "ocaml" {>= "4.08.0"}
  "stdint"
  "astring"
  "fmt" {>= "0.8.7"}
  "logs"
  "asetmap"
  "dune" {>= "3.0"}
  "alcotest" {with-test & >= "1.0.1"}
  "afl-persistent" {with-test}
]
conflicts: [
  "result" {< "1.5"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/mirage/capnp-rpc.git"
