(executable
 (name test)
 (libraries io-page-unix capnp-rpc-lwt capnp-rpc-mirage alcotest-lwt examples
   logs.fmt testbed tcpip.ipv4 tcpip.stack-direct mirage-vnetif ethernet
   arp-mirage tcpip.tcp tcpip.icmpv4))

(alias
 (name runtest)
 (package capnp-rpc-mirage)
 (deps
  (:< test.bc))
 (action
  (run %{<})))
