(executable
 (name main)
 (libraries eio_main capnp-rpc-unix logs.fmt cmdliner)
 (flags (:standard -w -53-55)))

(rule
 (targets api.ml api.mli)
 (deps    api.capnp)
 (action (run capnp compile -o %{bin:capnpc-ocaml} %{deps})))

(rule
 (targets store.ml store.mli)
 (deps    store.capnp)
 (action (run capnp compile -o %{bin:capnpc-ocaml} %{deps})))
