(library
 (name testlib)
 (libraries astring capnp-rpc-lwt capnp-rpc-net)
 (flags :standard -w -53-55))

(rule
 (targets test_api.ml test_api.mli)
 (deps test_api.capnp)
 (action (run capnp compile -o %{bin:capnpc-ocaml} %{deps})))

(rule
 (targets calculator.ml calculator.mli)
 (deps calculator.capnp)
 (action (run capnp compile -o %{bin:capnpc-ocaml} %{deps})))
